--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,2 +1,6 @@
+$primary-color: #ffffff;
+$secondary-color: #1363df;
 $light-gray: #ededed;
 $black: #000000;
+$white: #ffffff;
+$active-color: #ff5677;
