--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,30 @@
-.App {
+@import "./assets/variables";
+@import url("https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap");
+
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: $primary-color;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  width: 100vw;
+  font-family: "Odibee Sans", "Acme";
+  margin-top: 75px;
+  letter-spacing: 1px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .title {
+    color: $secondary-color;
+    margin: 0;
+    padding: 50px 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  .icon {
+    color: $secondary-color;
+    font-size: 32px;
+    margin: 0 15px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      color: $active-color;
+    }
   }
 }
