--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,11 @@
   margin-top: 75px;
   letter-spacing: 1px;
 
+  .main {
+    min-height: 100vh;
+    width: 100vw;
+  }
+
   .title {
     color: $secondary-color;
     margin: 0;
