--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import "./assets/variables";
 @import url("https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 .app {
   text-align: center;
