--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,6 +1,8 @@
 $primary-color: #ffffff;
 $secondary-color: #1363df;
 $light-gray: #ededed;
+$gray: #c2cfd8;
 $black: #000000;
 $white: #ffffff;
 $active-color: #ff5677;
+$font-color: #000000;
