--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,7 +1,7 @@
 $primary-color: #ffffff;
 $secondary-color: #1363df;
 $light-gray: #ededed;
-$gray: #c2cfd8;
+$gray: #f5f5f5;
 $black: #000000;
 $white: #ffffff;
 $active-color: #ff5677;
