--- a/src/components/searchbar/searchbar.scss
+++ b/src/components/searchbar/searchbar.scss
@@ -15,7 +15,7 @@
     .searchbar-input {
       background-color: $primary-color;
       color: $secondary-color;
-      border: 2px solid $secondary-color;
+      border: 1px solid $primary-color;
       border-radius: 20px;
       padding: 10px;
       width: 100%;
@@ -23,11 +23,11 @@
       outline: none;
 
       &::placeholder {
-        color: $secondary-color;
+        color: $black;
       }
 
       &:focus {
-        border-color: $active-color;
+        border-color: $secondary-color;
       }
     }
 
@@ -38,9 +38,9 @@
       .icon-search {
         margin-left: 12px;
         font-size: 32px;
-        color: $secondary-color;
+        color: $primary-color;
         &:hover {
-          color: $active-color;
+          color: $secondary-color;
         }
       }
     }
