New logo and favicon
Added new logo and favicon with a new color palette.

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,8 +1,9 @@
 $primary-color: #ffffff;
-$secondary-color: #1363df;
+$secondary-color: #000000;
 $light-gray: #ededed;
 $gray: #f5f5f5;
 $black: #000000;
 $white: #ffffff;
-$active-color: #ff5677;
+$active-color: #d2001a;
+$active-color-alt: rgba(255, 255, 255, 0.7);
 $font-color: #000000;
