--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import "./assets/variables";
-@import url("https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope&family=Odibee+Sans&display=swap");
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
@@ -8,7 +8,7 @@
   background-color: $primary-color;
   min-height: 100vh;
   width: 100vw;
-  font-family: "Odibee Sans", "Acme";
+  font-family: "Manrope", sans-serif;
   margin-top: 75px;
   letter-spacing: 1px;
 
