Card and modal features
Card and modal feature updates added new buttons to the card component. Users can add the product to their favorites and also view product information with the view button on the card component.

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -65,6 +65,9 @@
 
   .card__icon-delete-container {
     position: absolute;
+    background: transparent;
+    padding: 0;
+    border: none;
     right: 0;
     top: 0;
     color: $font-color;
