--- a/src/components/navigation/nav.scss
+++ b/src/components/navigation/nav.scss
@@ -20,6 +20,10 @@
     &.icon-home {
       font-size: 35px;
     }
+
+    &:hover {
+      color: $active-color-alt;
+    }
   }
 
   .main-nav {
@@ -45,8 +49,14 @@
       align-items: center;
 
       .main-nav__logo {
-        width: 45px;
         margin-left: 15px;
+        width: 80px;
+        height: 50px;
+
+        g path {
+          width: 50px;
+          height: 50px;
+        }
       }
     }
 
