--- a/src/components/searchbar/searchbar.scss
+++ b/src/components/searchbar/searchbar.scss
@@ -14,8 +14,8 @@
 
     .searchbar-input {
       background-color: $primary-color;
-      color: $secondary-color;
-      border: 1px solid $primary-color;
+      color: $active-color-alt;
+      border: 1px solid $white;
       border-radius: 20px;
       padding: 10px;
       width: 100%;
@@ -27,7 +27,7 @@
       }
 
       &:focus {
-        border-color: $secondary-color;
+        border-color: $white;
       }
     }
 
@@ -40,7 +40,7 @@
         font-size: 32px;
         color: $primary-color;
         &:hover {
-          color: $secondary-color;
+          color: $active-color-alt;
         }
       }
     }
