--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -37,3 +37,12 @@
     right: 10px;
   }
 }
+
+.carousel__title-container {
+  .carousel__title {
+    font-size: 32px;
+    margin: 0;
+    padding: 25px;
+    text-align: left;
+  }
+}
