--- a/src/components/multi-row-carousel/multrowcarousel.scss
+++ b/src/components/multi-row-carousel/multrowcarousel.scss
@@ -1,20 +1,24 @@
 .video-with-products {
-  margin-bottom: 100px;
-
   .carousel {
     .carousel__container {
       .card {
         width: 275px;
         margin: 40px auto;
         justify-content: center;
+        padding: 30px;
 
-        .card__image {
-          max-width: 225px;
-        }
+        .card__link {
+          height: 210px;
 
-        .card-body {
-          text-align: center;
-          font-size: 20px;
+          .card__image {
+            max-width: 225px;
+          }
+
+          .card-body {
+            text-align: center;
+            font-size: 20px;
+            margin: 0;
+          }
         }
       }
     }
