--- a/src/components/navigation/nav.scss
+++ b/src/components/navigation/nav.scss
@@ -52,6 +52,8 @@
         margin-left: 15px;
         width: 80px;
         height: 50px;
+        fill: $white;
+        stroke: $white;
 
         g path {
           width: 50px;
