--- a/src/components/video-with-products/videowithproducts.scss
+++ b/src/components/video-with-products/videowithproducts.scss
@@ -4,7 +4,7 @@
   .video-with-products__container {
     display: flex;
     justify-content: flex-start;
-    max-height: 625px;
+    max-height: 665px;
     width: 100vw;
     .video-with-products__video {
       max-height: inherit;
@@ -17,5 +17,14 @@
       min-width: 0px; //min-width: 0px; a bug in Chrome implementing W3C spec wrongly
       background-color: $gray;
     }
+  }
+}
+
+.video-with-products__title-container {
+  .video-with-products__title {
+    font-size: 32px;
+    margin: 0;
+    padding: 25px;
+    text-align: left;
   }
 }
