--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -22,6 +22,11 @@
   min-height: 250px;
   height: 100%;
 
+  @media screen and (max-width: 500px) {
+    width: auto;
+    max-width: 350px;
+  }
+
   .card__link {
     display: flex;
     align-items: center;
@@ -31,27 +36,52 @@
     height: 235px;
     text-decoration: none;
 
+    @media screen and (max-width: 500px) {
+      height: 100%;
+    }
+
     .card-body {
       padding: 0 10px;
       font-size: 16px;
       margin-top: 20px;
       min-width: 175px;
 
+      @media screen and (max-width: 500px) {
+        width: 100%;
+      }
+
       .card-body__title-primary-name {
         margin: 0;
         font-size: 18px;
         letter-spacing: 0.5px;
+        @media screen and (max-width: 500px) {
+          font-size: 27px;
+        }
       }
 
       .card-body__title-secondary-name {
         margin: 0;
+        overflow-y: scroll;
+        /* Hide scrollbar for IE, Edge and Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
 
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        &::-webkit-scrollbar {
+          display: none;
+        }
         margin-top: 3px;
+        @media screen and (max-width: 500px) {
+          font-size: 21px;
+        }
       }
 
       .card-body__msrp {
         margin-top: 10px;
         margin-bottom: 10px;
+        @media screen and (max-width: 500px) {
+          font-size: 20px;
+        }
       }
     }
 
@@ -62,6 +92,10 @@
 
   .card__image {
     max-width: 150px;
+    @media screen and (max-width: 500px) {
+      max-width: 300px;
+      padding-top: 25px;
+    }
   }
 
   .card__icon-delete-container {
@@ -104,6 +138,10 @@
     transition: all 0.3s ease-in-out;
     &:hover {
       opacity: 1;
+    }
+
+    @media screen and (max-width: 760px) {
+      display: none;
     }
 
     .card__button {
