--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -1,40 +1,47 @@
 @import "../../assets/variables";
 
-.carousel__container {
-  background-color: $gray;
-  div.slick-slider div.slick-track,
-  div.slick-slider div.slick-list {
-    display: flex;
-    align-items: center;
-    min-height: 300px;
+.carousel {
+  margin-bottom: 50px;
+
+  &:last-of-type {
+    margin-bottom: 0;
   }
-
-  .slick-prev,
-  .slick-next {
-    width: 30px;
-    height: 30px;
-    z-index: 3;
-    opacity: 0.5;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-
-    &::before {
-      font-size: 30px;
-      color: $black;
+  .carousel__container {
+    background-color: $gray;
+    div.slick-slider div.slick-track,
+    div.slick-slider div.slick-list {
+      display: flex;
+      align-items: center;
+      min-height: 300px;
     }
 
-    &:hover {
-      opacity: 1;
-      scale: 1.1;
+    .slick-prev,
+    .slick-next {
+      width: 30px;
+      height: 30px;
+      z-index: 3;
+      opacity: 0.5;
+      -webkit-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+
+      &::before {
+        font-size: 30px;
+        color: $black;
+      }
+
+      &:hover {
+        opacity: 1;
+        scale: 1.1;
+      }
     }
-  }
 
-  .slick-prev {
-    left: 10px;
-  }
+    .slick-prev {
+      left: 10px;
+    }
 
-  .slick-next {
-    right: 10px;
+    .slick-next {
+      right: 10px;
+    }
   }
 }
 
@@ -44,5 +51,9 @@
     margin: 0;
     padding: 25px;
     text-align: left;
+
+    @media screen and (max-width: 760px) {
+      text-align: center;
+    }
   }
 }
