--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -12,6 +12,95 @@
   padding: 40px;
   z-index: 101;
 
+  @media screen and (max-width: 1100px) {
+    padding: 10px;
+  }
+
+  @media screen and (max-width: 850px) {
+    width: 95%;
+  }
+
+  @media screen and (max-width: 650px) {
+    height: 65%;
+    padding: 20px;
+  }
+
+  .modal-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    .modal-image__container {
+      .modal-image {
+        max-width: 300px;
+
+        @media screen and (max-width: 1100px) {
+          max-width: 200px;
+        }
+
+        @media screen and (max-width: 650px) {
+          max-width: 300px;
+        }
+      }
+    }
+
+    @media screen and (max-width: 650px) {
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+
+  .modal-content__container {
+    text-align: left;
+    padding: 0 10px;
+
+    p {
+      margin: 0;
+      letter-spacing: 2px;
+    }
+
+    .modal-content__title {
+      font-size: 25px;
+      @media screen and (max-width: 1100px) {
+        font-size: 18px;
+      }
+    }
+
+    .modal-content__subtitle {
+      margin-top: 5px;
+
+      font-size: 20px;
+      @media screen and (max-width: 1100px) {
+        font-size: 16px;
+      }
+    }
+
+    .modal-content__msrp {
+      margin-top: 5px;
+      font-size: 16px;
+      @media screen and (max-width: 1100px) {
+        font-size: 16px;
+      }
+    }
+
+    .modal-content__text {
+      font-size: 16px;
+      overflow-y: scroll;
+      height: 200px;
+      font-family: "Manrope", sans-serif;
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+
   .modal-delete-btn {
     width: 40px;
     height: 40px;
@@ -30,61 +119,6 @@
       color: $active-color;
     }
     .modal__delete-icon {
-    }
-  }
-
-  .modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-
-    .modal-image__container {
-      .modal-image {
-        max-width: 400px;
-        max-width: 300px;
-      }
-    }
-  }
-
-  .modal-content__container {
-    text-align: left;
-    padding: 0 10px;
-
-    p {
-      margin: 0;
-      letter-spacing: 2px;
-    }
-
-    .modal-content__title {
-      font-size: 25px;
-    }
-
-    .modal-content__subtitle {
-      margin-top: 5px;
-
-      font-size: 20px;
-    }
-
-    .modal-content__msrp {
-      margin-top: 5px;
-      font-size: 16px;
-    }
-
-    .modal-content__text {
-      font-size: 16px;
-      overflow-y: scroll;
-      height: 200px;
-      font-family: "Manrope", sans-serif;
-
-      /* Hide scrollbar for IE, Edge and Firefox */
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
-
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      &::-webkit-scrollbar {
-        display: none;
-      }
     }
   }
 }
